Main-raised class that adds a grey padding at the bottom of the page fixed on shop page Cart page title spacing fixed More padding for cart action buttons

--- a/assets/sass/6_woocommerce/_cart-page.scss
+++ b/assets/sass/6_woocommerce/_cart-page.scss
@@ -8,7 +8,13 @@
     line-height: 27px;
   }
 
+  /* Align cart table with cart totals on right side */
+  .woocommerce-cart-form table.shop_table {
+    margin-top: 0;
+  }
+
   .shop_table {
+
     thead {
       tr {
         th {
@@ -116,7 +122,7 @@
   font-size: 14px;
   font-weight: 600;
   line-height: 24px;
-  padding: 11px 5px;
+  padding: 11px 15px;
   border: none;
 }
 .woocommerce-cart table.shop_table tr td.actions input[type=submit]:hover {
